--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-761.7KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
-  - {name: 🇯🇵 日本-2.90MB/s(Youtube:不良林), server: 85.208.108.94, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-3.10MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇯🇵 日本-2.41MB/s(Youtube:不良林), server: 85.208.108.94, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇯🇵 日本-2.96MB/s(Youtube:不良林), server: 85.208.108.94, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇯🇵 日本-2.46MB/s(Youtube:不良林), server: 85.208.108.94, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇬🇧 英国-842.1KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-3.28MB/s(Youtube:不良林), server: 85.208.108.94, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-1.57MB/s(Youtube:不良林), server: 85.208.108.94, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇳 中国-5.45MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇨🇳 中国-5.65MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
   - {name: 🇨🇳 中国-5.56MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-761.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
+      - 🇬🇧 英国-842.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-761.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
+      - 🇬🇧 英国-842.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-761.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
+      - 🇬🇧 英国-842.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-761.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
+      - 🇬🇧 英国-842.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-761.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
+      - 🇬🇧 英国-842.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-761.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
+      - 🇬🇧 英国-842.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-761.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
+      - 🇬🇧 英国-842.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
