--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇯🇵 日本-2.96MB/s(Youtube:不良林), server: 85.208.108.94, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇯🇵 日本-2.46MB/s(Youtube:不良林), server: 85.208.108.94, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇬🇧 英国-842.1KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-3.28MB/s(Youtube:不良林), server: 85.208.108.94, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-1.57MB/s(Youtube:不良林), server: 85.208.108.94, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-5.45MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.65MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.41MB/s(Youtube:不良林), server: 85.208.108.94, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇸🇬 新加坡-2.01MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.25MB/s(Youtube:不良林), server: 85.208.108.94, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇯🇵 日本-2.88MB/s(Youtube:不良林), server: 85.208.108.94, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇳 中国-5.56MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.65MB/s(Youtube:不良林) 2, server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.65MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇨🇳 中国-5.62MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.03MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇬🇧 英国-842.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇬🇧 英国-842.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,15 +53,15 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇬🇧 英国-842.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,30 +73,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇬🇧 英国-842.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇬🇧 英国-842.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -104,15 +104,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇬🇧 英国-842.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,15 +129,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.46MB/s(Youtube:不良林)
-      - 🇬🇧 英国-842.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
