--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.96MB/s(Youtube:不良林), server: 85.208.108.94, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇯🇵 日本-2.41MB/s(Youtube:不良林), server: 85.208.108.94, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇸🇬 新加坡-2.01MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.25MB/s(Youtube:不良林), server: 85.208.108.94, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇯🇵 日本-2.88MB/s(Youtube:不良林), server: 85.208.108.94, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-5.56MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.65MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.62MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.03MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-185.1KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇯🇵 日本-3.36MB/s(Youtube:不良林), server: 85.208.108.94, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇭🇰 香港-1.61MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇨🇳 中国-5.65MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.49MB/s(Youtube:不良林), server: 85.208.108.94, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇯🇵 日本-1.66MB/s(Youtube:不良林), server: 85.208.108.94, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇷🇺 俄罗斯联邦-1.11MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇯🇵 日本-3.41MB/s(Youtube:不良林), server: 85.208.108.94, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 塞浦路斯-439.8KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇫🇷 法国-1.49MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-185.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 塞浦路斯-439.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-185.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 塞浦路斯-439.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-185.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 塞浦路斯-439.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.61MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-185.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 塞浦路斯-439.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-185.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 塞浦路斯-439.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-185.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 塞浦路斯-439.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-185.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 塞浦路斯-439.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.49MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
