--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-185.1KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇯🇵 日本-3.36MB/s(Youtube:不良林), server: 85.208.108.94, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇭🇰 香港-1.61MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 🇨🇳 中国-5.65MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.49MB/s(Youtube:不良林), server: 85.208.108.94, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇯🇵 日本-2.74MB/s(Youtube:不良林), server: 85.208.108.94, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇯🇵 日本-2.88MB/s(Youtube:不良林), server: 85.208.108.94, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1002.5KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-3.04MB/s(Youtube:不良林), server: 85.208.108.94, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇯🇵 日本-2.78MB/s(Youtube:不良林), server: 85.208.108.94, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇯🇵 日本-1.66MB/s(Youtube:不良林), server: 85.208.108.94, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇷🇺 俄罗斯联邦-1.11MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
   - {name: 🇯🇵 日本-3.41MB/s(Youtube:不良林), server: 85.208.108.94, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-185.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.36MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1002.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-185.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.36MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1002.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-185.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.36MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1002.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
@@ -66,18 +66,17 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.61MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-185.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.36MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1002.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
@@ -88,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-185.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.36MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1002.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
@@ -104,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-185.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.36MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1002.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
@@ -129,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-185.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.36MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1002.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.78MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
